tests/ui_fail/unqualified_type_param.stderr
error: Ambiguous associated type. Qualify with a trait to disambiguate (e.g. < T as Trait > :: Group)
  --> tests/ui_fail/unqualified_type_param.rs:12:9
   |
12 |         T::Group: Dispatch,
   |         ^^^^^^^^

error: Ambiguous associated type. Qualify with a trait to disambiguate (e.g. < T as Trait > :: Group)
  --> tests/ui_fail/unqualified_type_param.rs:26:9
   |
26 |         <T>::Group: Dispatch,
   |         ^^^^^^^^^^
